# actix-login-demo

./: .env  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
backend/: Cargo.toml
backend/src/: main.rs  models.rs  schema.rs
frontend/: Cargo.toml  Makefile.toml  index.html
frontend/src/: content.rs  lib.rs  login.rs
migrations/2020-09-23-075910_create_users/: up.sql
src/: actions.rs  handlers.rs  main.rs
