[package]
name = "backend"
version = "0.1.0"
authors = ["Liu Hao <liuhao@nets.com.sg>"]
edition = "2018"

[dependencies]
actix-web = "*"
actix-files = "*"
chrono = { version = "*", features = [ "serde" ] }
dotenv = "*"
env_logger = "*"
serde = "*"
serde_json = "*"

[dependencies.diesel]
features = ["mysql", "r2d2", "chrono"]
version = "1.4.5"
